# LocalChatBox

./: .gitignore  .npmrc  BUILD_REPORT.md  DEVELOPERS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0_3.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
LICENSES/: README.md
data/: settings.example.json
docs/: END_USER_INSTALL.md  RELEASE_PIPELINE.md  RUNTIME_PACKS.md
models/: put-gguf-models-here.txt
runtime/win/: README.md  VERSION.example.txt
scripts/: build-windows-installer.ps1  check-runtime-flags.ps1  gen-icons.py  prepare-llama-runtime.ps1  prepare-runtime-pack.ps1  stage-release-artifacts.ps1
src/: main.ts  style.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  engine.rs  hardware.rs  main.rs  models.rs  paths.rs  runtime.rs  storage.rs
