[package]
name = "localchatbox"
version = "0.3.0"
description = "A Windows-first local GGUF chat cockpit with runtime probing, model registry, and llama.cpp router support."
authors = ["LocalChatBox Builder"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }
rand = "0.8"
