[package]
name = "localchatbox"
version = "0.3.1"
description = "Windows-first local AI chat app that bundles a pinned llama.cpp CPU runtime, stores models in LOCALAPPDATA, and provides a ChatGPT-like interface."
authors = ["LocalChatBox Builder"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }
rand = "0.8"
